
  * debian/rules:
    + Support CONCURRENCY_LEVEL.
    + Don't ignore make distclean errors.

  * debian/control:
    + Add ${shlibs:Depends} to -dev packages, to get a proper dependency
      when these packages ship binaries.
    + Use ${source:Version} instead of ${Source-Version} (Closes: 430726).
    + Set policy to 3.7.3.
    + Use Vcs-Svn: instead of XS-Vcs-Svn: fields.

 -- Sam Hocevar (Debian packages) <sam+deb@zoy.org>  Mon, 10 Mar 2008 16:41:05 +0000

opencv (1.0.0-3) unstable; urgency=low

  * debian/control:
    + Set maintainer to the pkg-scicomp team.
    + Updated Vcs fields.
  * debian/compat:
    + Set compat version to 5.

 -- Sam Hocevar (Debian packages) <sam+deb@zoy.org>  Sun,  1 Apr 2007 15:19:15 +0200

opencv (1.0.0-2) unstable; urgency=low

  * Upload to unstable.
  * debian/patches/120_header_warnings.diff:
    + New patch. Fix warnings in shipped headers.

 -- Sam Hocevar (Debian packages) <sam+deb@zoy.org>  Wed, 28 Mar 2007 19:02:18 +0200

opencv (1.0.0-1) experimental; urgency=low

  * New upstream release.
  * debian/control:
    + Depend on pkg-config now that opencv-config is deprecated.
  * debian/rules:
    + Do not remove haartraining files (Closes: #368568).

  * debian/patches/010_python_cspec.diff:
    + New patch. Add -fno-strict-aliasing because of numerous aliasing
      issues in the code (Closes: #388129).

  * debian/patches/110_dc1394.diff:
    + Fix a few bugs in the dc1394 code.

 -- Sam Hocevar (Debian packages) <sam+deb@zoy.org>  Tue, 14 Nov 2006 17:12:26 +0100

opencv (0.9.7-4) unstable; urgency=low

  * Migrate package to the new python policy (Closes: #373469), thanks to
    Pierre Habouzit.
  * debian/control: add XS-Vcs-Svn information.

 -- Sam Hocevar (Debian packages) <sam+deb@zoy.org>  Thu, 12 Oct 2006 09:21:14 +0200

opencv (0.9.7-3) unstable; urgency=low

  * debian/patches/110_dereferencement.diff:
    + Fix compilation warnings due to type-punned pointer dereferencement.
