@@ -11,7 +11,11 @@ opencv (1.0.0-4) unstable; urgency=low
     + Set policy to 3.7.3.
     + Use Vcs-Svn: instead of XS-Vcs-Svn: fields.
 
- -- Sam Hocevar (Debian packages) <sam+deb@zoy.org>  Mon, 10 Mar 2008 16:41:05 +0000
+  * debian/patches/100_ffmpeg_updates.diff:
+    + Updated patch. Getting and setting framerate in FFmpeg streams now
+      works properly again. Thanks to Eric Beets for half the fix.
+
+ -- Sam Hocevar (Debian packages) <sam+deb@zoy.org>  Mon, 10 Mar 2008 16:41:56 +0000
 
 opencv (1.0.0-3) unstable; urgency=low
 
